differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr69801.c-4.8.2-1.out.txt
pr69801.c: In function ‘fn1’:
pr69801.c:9:32: error: non-lvalue array in conditional expression
 void fn1() { e ? (d ? b : c).c : (d ? b : c).c; }
                                ^
